# ai-dev-pipeline

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
agents/: __init__.py  base_agent.py  code_reviewer_agent.py  coder_agent.py  design_reviewer_agent.py  generation_agents.py  goal_effect_validator_agent.py  llm_agent.py  optimization_dispatcher_agent.py  optimization_executor_agent.py  optimization_planner_agent.py  test_validator_agent.py
artifacts/: __init__.py  io.py
config/: pipeline.yaml
docs/demos/: ai_dev_pipeline_demo.html
prompts/: bootstrap_codex_prompt.md  dev_001_codex_prompt.md
scripts/: check_bootstrap_outputs.sh  run_codex_bootstrap.sh  run_codex_dev_001.sh  run_end_to_end.py  run_local_task.py  run_validation_loop.py
tasks/: __init__.py  state.py
tests/: test_artifacts_io.py  test_base_agent.py  test_coder_agent.py  test_design_reviewer_agent.py  test_llm_agent.py  test_optimization_dispatcher_agent.py  test_optimization_executor_agent.py  test_optimization_planner_agent.py  test_readme_usage.py  test_run_end_to_end.py  test_run_local_task.py  test_run_validation_loop.py  test_task_state.py  test_validation_agents.py
workspace/tasks/dev-002/: state.json
workspace/tasks/dev-003/: state.json
workspace/tasks/dev-004/: state.json
workspace/tasks/dev-005/: state.json
workspace/tasks/dev-006/: state.json
workspace/tasks/dev-007/: state.json
workspace/tasks/dev-008/: state.json
workspace/tasks/dispatch-001/: state.json
workspace/tasks/dispatch-002-design-review/: state.json
workspace/tasks/exec-003/: state.json
(+990 files in other folders)
