[project]
name = "ai-dev-pipeline"
version = "0.1.0"
description = "Multi-agent AI development pipeline"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["agents*", "artifacts*"]

[tool.ruff]
line-length = 100
